more z-index fixes after seeing one that was affecting page headers being above modals

--- a/app/assets/stylesheets/nfg_ui/network_for_good/public/plugins/_sticky_div.scss
+++ b/app/assets/stylesheets/nfg_ui/network_for_good/public/plugins/_sticky_div.scss
@@ -7,5 +7,5 @@
   top: 0;
   z-index: ($zindex-dropdown - 1);
   transition: $transition-base;
-  &.stuck { z-index: ($zindex-tooltip + 1); }
+  &.stuck { z-index: $zindex-sticky; }
 }
